--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pagination",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,8 @@
     "ejs": "^2.5.7",
     "express": "^4.15.5",
     "faker": "^4.1.0",
-    "mongoose": "^4.11.13"
+    "mongoose": "^4.11.13",
+    "querystring": "^0.2.0",
+    "url": "^0.11.0"
   }
 }
